--- a/website.html
+++ b/website.html
@@ -13,7 +13,7 @@ div.scroll
 Width: 50px;
 Height: 50px;
 Overflow: x:scroll;
-Overflow: y:scroll
+Overflow: y:scroll;
 }
 
 /* Header color */
@@ -22,7 +22,7 @@ h1 {
 }
 
 {
-  box-sizing: border-box;
+  box-sizing: border-box
 }
 
 body {
@@ -101,7 +101,8 @@ body {
 </div>
 
 <div class="topnav">
-  <a href="#">About Us</a>
+  <a href="About Us.html">About Us</a>
+  <link rel="stylesheet" href="style.css">
 </div>
 
 <div class="divScroll">
@@ -121,7 +122,7 @@ body {
 </div>
 
 <script src="fssmap.js"></script>
-<script async
+<script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCmg-SPu3dGfoDLbx6w2rPoAV00s3IR1OI&callback=initMap">
 </script>
   
