--- a/website.html
+++ b/website.html
@@ -103,6 +103,8 @@ body {
 <div class="topnav">
   <a href="About Us.html">About Us</a>
   <link rel="stylesheet" href="style.css">
+  <a href="More on Solar.html">More on Solar</a>
+  <link rel="stylesheet" href="style.css">
 </div>
 
 <div class="divScroll">
