--- a/About Us.html
+++ b/About Us.html
@@ -108,6 +108,8 @@ body {
 <div class="topnav">
   <a href="website.html">Map</a>
   <link rel="stylesheet" href="style.css">
+  <a href="More on Solar.html">More on Solar</a>
+  <link rel="stylesheet" href="style.css">
 </div>
 
 <div class="divScroll">
