--- a/About Us.html
+++ b/About Us.html
@@ -49,8 +49,8 @@ body {
 }
 
 .explanation {
-    background-color: green;
-    color: red;
+    background-color: red;
+    color: white;
     text-align: center;
 }
 
@@ -143,7 +143,7 @@ body {
 </div>
 
 <div class="explanation">
-    <p> Description</p>
+    <p> Florida has one of the largest per capita consumptions of energy in all of the United States. Florida itself has limited public and private spending and few initiatives in the Sunshine State for renewable energy resources, like solar. This is likely because there aren't many good resources available to help inform people if a switch to solar is a good idea for them. Therefore, we made this website to show people the best suited areas for solar placement and suitability and to inform the average Florida homeowner and business owner if their land is not only suitable, but strongly encouraged economically and environmentally.</p>
 </div>
 
 </body>
