--- a/About Us.html
+++ b/About Us.html
@@ -81,6 +81,7 @@ body {
   float: left;
   width: 25%;
   text-align: center;
+  color: white
 }
 
 /* Clears floats after the columns. */
@@ -120,8 +121,9 @@ body {
 </div>
 
 <div class="row">
-  <div class="column" style="background-color: aqua;">
+  <div class="column" style="background-color: blue;">
     <h2>William Gregory - Project Manager</h2>
+    <img src="IMG_3287.JPG" width="250" height="400">
     <p>William Gregory is currently a 3rd year double major in Computer Science and Mathematics in the University of Florida. He is expected to graduate by May 2023.</p>
   </div>
   <div class="column" style="background-color: salmon;">
@@ -130,6 +132,7 @@ body {
   </div>
   <div class="column" style="background-color: blueviolet;">
     <h2>Neeva Sethi - Development Member</h2>
+    <img src="IMG_3772.JPG" width="250" height="250">
     <p>Description</p>
   </div>
   <div class="column" style="background-color:crimson;">
