--- a/About Us.html
+++ b/About Us.html
@@ -127,7 +127,8 @@ body {
     <p>William Gregory is currently a 3rd year double major in Computer Science and Mathematics in the University of Florida. He is expected to graduate by May 2023.</p>
   </div>
   <div class="column" style="background-color: salmon;">
-    <h2>Daniel Rocco - SCRUM Master</h2>
+    <h2>Daniel Rocco - Project SCRUM Master</h2>
+    <img src="IMG-0356.jpg" width="250" height="400">
     <p>Description</p>
   </div>
   <div class="column" style="background-color: blueviolet;">
