--- a/About Us.html
+++ b/About Us.html
@@ -138,6 +138,7 @@ body {
   </div>
   <div class="column" style="background-color:crimson;">
     <h2>Mitali Matoli - Development Member</h2>
+    <img src="20201019_131553.jpg" width="250" height="250">
     <p>Description</p>
   </div>
 </div>
