about us for Daniel

--- a/About Us.html
+++ b/About Us.html
@@ -129,7 +129,7 @@ body {
   <div class="column" style="background-color: salmon;">
     <h2>Daniel Rocco - Project SCRUM Master</h2>
     <img src="IMG-0356.jpg" width="250" height="400">
-    <p>Description</p>
+    <p>Daniel Rocco is a 5th Year Computer Science major at The University of Florida. He enjoys playing video games and soccer in his free time, and his favorite resaurant in Gainesville is La Tienda.</p>
   </div>
   <div class="column" style="background-color: blueviolet;">
     <h2>Neeva Sethi - Development Member</h2>
