updated map with data, new colors, and zone information

--- a/About Us.html
+++ b/About Us.html
@@ -134,12 +134,12 @@ body {
   <div class="column" style="background-color: blueviolet;">
     <h2>Neeva Sethi - Development Member</h2>
     <img src="IMG_3772.JPG" width="250" height="250">
-    <p>Description</p>
+    <p>Neeva Sethi is a 3rd year Computer Science and Biology double major at the University of Florida. She enjoys swimming, reading, and thrifting in her free time.</p>
   </div>
   <div class="column" style="background-color:crimson;">
     <h2>Mitali Matoli - Development Member</h2>
     <img src="20201019_131553.jpg" width="250" height="250">
-    <p>Description</p>
+    <p>Mitail Matoli is a 3rd year Computer Science and Statistics double major at the University of Florida. She enjoys dancing and listening to music in her free time. </p>
   </div>
 </div>
 
