--- a/About Us.html
+++ b/About Us.html
@@ -107,7 +107,7 @@ body {
 </div>
 
 <div class="topnav">
-  <a href="website.html">Map</a>
+  <a href="fss.html">Map</a>
   <link rel="stylesheet" href="style.css">
   <a href="More on Solar.html">More on Solar</a>
   <link rel="stylesheet" href="style.css">
