Update More on Solar.html

--- a/More on Solar.html
+++ b/More on Solar.html
@@ -96,7 +96,7 @@ body {
 </div>
 
 <div class="topnav">
-  <a href="website.html">Map</a>
+  <a href="fss.html">Map</a>
   <link rel="stylesheet" href="style.css">
   <a href="About Us.html">About Us</a>
   <link rel="stylesheet" href="style.css">
